[metadata]
name = Speechlight
description = A lightweight Python library providing a common interface to multiple TTS and screen reader APIs.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
author = Nick Stockton
author_email = nstockton@users.noreply.github.com
license = Mozilla Public License 2.0 (MPL 2.0)
license_file = LICENSE.txt
url = https://github.com/nstockton/speechlight
project_urls =
	homepage = https://github.com/nstockton/speechlight
	Documentation = https://nstockton.github.io/speechlight
	Download = https://pypi.org/project/speechlight/#files
keywords =
	blind
	jaws
	jfw
	nvda
	system access
	sapi
	VoiceOver
	speech
	tts
	ScreenReader
platforms = any
classifiers =
	License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: Implementation :: CPython
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	Operating System :: OS Independent
	Topic :: Adaptive Technologies
	Topic :: Software Development :: Libraries
	Operating System :: POSIX :: Linux
	Operating System :: Unix
	Operating System :: MacOS
	Operating System :: Microsoft :: Windows

[options]
python_requires = >=3.7
install_requires =
	pyobjc; platform_system == "Darwin"
	pywin32; platform_system == "Windows"
zip_safe = False
packages =
	speechlight
package_dir =
	speechlight = speechlight

[options.package_data]
speechlight =
	py.typed
	speech_libs/*
